Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignObjectBooleanField.quorum
class Main
    Object v = Test()
    action Main
    end

    action Test() returns Object
        boolean var = true
        return var
    end
end